--- a/to-do.html
+++ b/to-do.html
@@ -28,10 +28,17 @@
         </div>   
         <ul id="ListaAtividade"></ul>
         <footer>
-            <p>Dupla:Jhoe Erick e Gustavo Prechlak   |  <a href="#">Github</a></p>
+            <p> Dupla: Jhoe Erick e Gustavo Prechlak   |  <a href="#">Github</a></p>
         </footer>
     </div>
-        
+<div id="modal-confirm"class="modal">
+    <div class="modal-conteudo">
+        <p id="mensagem-modal">Você tem certeza que deseja fazer essa alteração?</p>
+        <button id="btn-confirm">Sim</button>
+        <button id="btn-negar">Não</button>
+    </div>
+</div>    
+    
 </body>
 <script src="script.js"></script>
 </html>
