--- a/to-do.html
+++ b/to-do.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO DO LIST</title>
+    <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="cima">
-            <div class="imagem">
-        <img src="https://images.ctfassets.net/n80ui2xgiaml/6POH36zaJYxXTyjmBSOKtb/8c75ffc935f549d07110fa41ab104e69/Brasoes-IFPR.png?w=300&q=100" alt="Imagem" height="75" width="75" >
+        <div class="header">
+            <div class="logo">
+                <img src="https://images.ctfassets.net/n80ui2xgiaml/6POH36zaJYxXTyjmBSOKtb/8c75ffc935f549d07110fa41ab104e69/Brasoes-IFPR.png?w=300&q=100" alt="Logo IFPR" height="75" width="75">
             </div>
-            <div class="titulo">
-        <h1>To Do List IFPR</h1>
-            </div>    
+            <div class="title">
+                <h1>To Do List IFPR</h1>
+            </div>
         </div>
         
-        <div class="input">
-            <input type="text" id="input-barrinha" placeholder="Atividade">
-            <select id="prioridade">
-                <option value="Alta"></option>
-                <option value="Média"></option>
-                <option value="Baixa"></option>
+        <div class="input-section">
+            <input type="text" id="task-input" placeholder="Atividade">
+            <select id="priority-select">
+                <option value="Alta">Alta</option>
+                <option value="Média">Média</option>
+                <option value="Baixa">Baixa</option>
             </select>
-            <button onclick="AdicionaTarefa()">Adicionar</button>
+            <button onclick="addTask()">Adicionar</button>
         </div>   
-        <ul id="ListaAtividade"></ul>
+        <ul id="task-list"></ul>
         <footer>
-            <p> Dupla: Jhoe Erick e Gustavo Prechlak   |  <a href="#">Github</a></p>
+            <p>Dupla: Jhoe Erick e Gustavo Prechlak | <a href="#">GitHub</a></p>
         </footer>
     </div>
-<div id="modal-confirm"class="modal">
-    <div class="modal-conteudo">
-        <p id="mensagem-modal">Você tem certeza que deseja fazer essa alteração?</p>
-        <button id="btn-confirm">Sim</button>
-        <button id="btn-negar">Não</button>
+
+    <!-- Modal -->
+    <div id="modal-confirm" class="modal">
+        <div class="modal-content">
+            <p id="modal-message">Você tem certeza que deseja fazer essa alteração?</p>
+            <button id="confirm-btn">Sim</button>
+            <button id="cancel-btn">Não</button>
+        </div>
     </div>
-</div>    
     
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
